Move references.md to root directory

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 <article>
   {{ content }}
 
-  <header><h1>Resources</h1></header><!--todo: change to category-->
+  <header><h1>Posts</h1></header><!--todo: change to category-->
 
   <ul class="archive">
     {%- assign posts = site.posts  -%}
